# Pharma-Assist

./: .env  DATABASE_CREATION.PHP  README.md  customer_dashboard.php  dashboard.php  db.php  extract_medicines.py  index.php  pharmacist_dashboard.php  process_ocr.php  pyproject.toml  register.php  upload.php  upload_prescription.php
scripts/: ocr_script.py
